# Firefox-WebDriver

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
benches/: multi_window.rs  plot_results.py  run_benchmarks.sh
benches/results/: benchmark_results.csv
docs/: getting-started.md
docs/api/: driver.md  element.md  errors.md  network.md  proxy.md  storage.md  tab.md  window.md
docs/examples/: README.md
docs/guides/: element-interaction.md  forms.md  frames.md  navigation.md  network-interception.md  parallel-automation.md  screenshot.md  waiting.md
examples/: 001_basic_launch.rs  002_navigation.rs  003_script_execution.rs  004_element_query.rs  005_element_interaction.rs  006_storage.rs  007_frame_switching.rs  008_element_observer.rs  009_proxy.rs  010_network_intercept.rs  011_canvas_fingerprint.rs  012_multi_window.rs  013_screenshot.rs  014_forms.rs  015_keyboard.rs  016_mouse.rs  017_outlook_register.rs  018_discord_register.rs  bench_runner.rs  common.rs
src/: error.rs  identifiers.rs  lib.rs
src/browser/: element.rs  keyboard.rs  mod.rs  network.rs  proxy.rs  selector.rs  tab.rs  window.rs
src/browser/tab/: core.rs  elements.rs  frames.rs  mod.rs  navigation.rs  network.rs  proxy.rs  screenshot.rs  script.rs  scroll.rs  storage.rs
src/driver/: assets.rs  builder.rs  core.rs  mod.rs  options.rs
src/driver/profile/: extensions.rs  mod.rs  preferences.rs
src/protocol/: command.rs  event.rs  mod.rs  request.rs
src/transport/: connection.rs  mod.rs  pool.rs  server.rs
